# OOP_LAB6

./: CMakeLists.txt  README.md
include/: bull.h  dragon.h  frog.h  npc.h
src/: bull.cpp  dragon.cpp  frog.cpp  main.cpp  npc.cpp
test/: tests.cpp
